@@ -38,6 +38,11 @@ http {
             index wing.js;
         }
 
+        location ~ /wing.angular.js { 
+            root [% wing_home %]/public;
+            index wing.angular.js;
+        }
+
 
         location ~ \.(html|xml|txt|json) {
             add_header Cache-Control must-revalidate;
