@@ -40,6 +40,7 @@
         "sasl_username" : "USER@EXAMPLE.COM",
         "sasl_password" : "PASSWORD"
     },
+    #"email_override" : "user@example.com",
     "db" : [
         "DBI:mysql:database=PROJECT",
         "USERNAME",
