@@ -4,6 +4,9 @@ This file tracks the changes to Wing over time. Especially
 with respect to new features and compatibility changes.
 ==========================================================
 
+2015-04-09
+ * Added "email_override" option to the config file. If this is specified then any emails sent out will always go to that address rather than the intented recipient.
+
 2015-03-31
  * A massive overhaul to wing.angular.js:
  * Refactored objectListManager factory to be smaller and more flexible.
